--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,26 @@
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "email" }%>
+    <%= f.input :name,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "name" }%>
+    <%= f.input :location,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "location" }%>
+    <%= f.input :language,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "language" }%>
+    <%= f.input :availability,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "availbility" }%>
+    <%= f.input :bio,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "bio" }%>
     <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
@@ -18,6 +38,7 @@
   </div>
 
   <div class="form-actions">
+
     <%= f.button :submit, "Sign up" %>
   </div>
 <% end %>
