--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,30 @@
 // Specific CSS for your home-page
+#show-page {
+  font-family: "Lato", sans-serif;
+}
+
+.profile {
+  width: 60%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  h3 {
+    font-weight: 400;
+  }
+
+  h1 {
+    font-weight: 700;
+    font-size: 70px;
+  }
+}
+
+.profile-info {
+  display: flex;
+  justify-content: space-evenly;
+  width: 70%;
+  p {
+    // width: 20%;
+  }
+}
