--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -32,17 +32,31 @@
   <div class="about">
     <h2>About</h2>
 
-    <h5>Tech Stack</h5>
-    <p>etc</p>
-    <h5>BIO</h5>
-    <p> <%= @user.bio %> </p>
+    <div class="stack-bio">
+      <div class="stack">
+        <h5>Tech Stack</h5>
+        <p>etc</p>
+      </div>
+      <div class="bio">
+        <h5>BIO</h5>
+        <p> <%= @user.bio %> </p>
+      </div>
+    </div>
 
+    <div class="edu-social">
+      <div class="education">
+        <h5>Coding education</h5>
+        <p>Coding Bootcamp</p>
+        <p>Le Wagon</p>
+        <p>London</p>
+      </div>
 
-    <h5>coding Education</h5>
-    <p>address and grad date</p>
+      <div class="social">
+        <h5>Social Profiles</h5>
+        <p>github, linkedin</p>
+      </div>
+    </div>
 
-    <h5>Social Media Profiles</h5>
-    <p>github, linked</p>
   </div>
   <p>---------------------------------------------------------------------------------</p>
 
