Styled: tech stack items styled

--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -35,10 +35,22 @@
     <div class="stack-bio">
       <div class="stack">
         <h5>Tech Stack</h5>
-        <p>etc</p>
+        <div class="d-flex">
+          <p>etcwefwe</p>
+          <p>etc</p>
+          <p>etc</p>
+          <p>etwefwefc</p>
+          <p>efewfewtc</p>
+          <p>etc</p>
+          <p>efwefwtc</p>
+        </div>
       </div>
+
       <div class="bio">
         <h5>BIO</h5>
+        <p> <%= @user.bio %> </p>
+        <p> <%= @user.bio %> </p>
+        <p> <%= @user.bio %> </p>
         <p> <%= @user.bio %> </p>
       </div>
     </div>
