fix: heroku errors, testing this will remove the problem. Am taking out ruby code associated with later changes

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,11 +5,11 @@
 
     <h3>Full Stack Developer</h3>
 
-    <h1> <%= @user.name %> </h1>
+    <%# <h1> <%= @user.name %> </h1> %>
 
     <div class="profile-info">
-      <p><h5>📍<%= @user.location.capitalize %></h5></p>
-      <p><h5>💬 <%= @user.language.capitalize %></h5></p>
+      <%# <p><h5>📍<%= @user.location.capitalize %></h5></p> %>
+      <%# <p><h5>💬 <%= @user.language.capitalize %></h5></p> %>
       <p><h5>🌐 <%= "Remote/Hybrid" %></h5></p>
     </div>
 
@@ -48,10 +48,10 @@
 
       <div class="bio">
         <h5>BIO</h5>
-        <p> <%= @user.bio %> </p>
-        <p> <%= @user.bio %> </p>
-        <p> <%= @user.bio %> </p>
-        <p> <%= @user.bio %> </p>
+        <%# <p> <%= @user.bio %> </p> %>
+        <%# <p> <%= @user.bio %> </p> %>
+        <%# <p> <%= @user.bio %> </p> %>
+        <%# <p> <%= @user.bio %> </p> %>
       </div>
     </div>
 
@@ -74,7 +74,7 @@
 
 
 
-  <h2><%= current_user %></h2>
+  <%# <h2><%= current_user %></h2> %>
 
-  <h2><%= @user.id %></h2>
+  <%# <h2><%= @user.id %></h2> %>
 </div>
