--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,7 @@
 <%# <%= render "users/show" %> %>
 
-<%= link_to "profile", user_path(current_user), class: "nav-link" %>
+<% if user_signed_in? %>
+  <%= link_to "profile", user_path(current_user), class: "nav-link" %>
+<% else %>
+  <p><h5>🌐 <%= "No signed up" %></h5></p>
+<% end %>
